Prevent CAPTCHA elements overflowing their containers

--- a/css/style.css
+++ b/css/style.css
@@ -8075,6 +8075,7 @@ form .webform-component input.email {
 }
 form .captcha {
   margin: 20px 0;
+  overflow: hidden;
 }
 form .deform .webform-component .form-control[readonly] {
   border: 0;
